// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-compute - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Azure VM and VMSS router for recommendations, pricing, autoscale, orchestration, connectivity troubleshooting, and capacity reservations. WHEN: Azure VM, VMSS, scale set, recommend, compare, server, website, burstable, lightweight, VM family, workload, GPU, learning, simulation, dev/test, backend, autoscale, load balancer, Flexible orchestration, Uniform orchestration, cost estimate, connect, refused, Linux, black screen, reset password, reach VM, port 3389, NSG, troubleshoot, capacity reservation, CRG, reserve VMs, guarantee capacity, pre-provision capacity, CRG association, CRG disassociation.",
  "extractedKeywords": [
    "3389",
    "association",
    "autoscale",
    "azure",
    "backend",
    "balancer",
    "black",
    "burstable",
    "capacity",
    "compare",
    "compute",
    "connect",
    "connectivity",
    "cost",
    "disassociation",
    "estimate",
    "family",
    "flexible",
    "guarantee",
    "learning",
    "lightweight",
    "linux",
    "load",
    "orchestration",
    "password",
    "port",
    "pre-provision",
    "pricing",
    "reach",
    "recommend",
    "recommendations",
    "refused",
    "reservation",
    "reservations",
    "reserve",
    "reset",
    "router",
    "scale",
    "screen",
    "server",
    "simulation",
    "test",
    "troubleshoot",
    "troubleshooting",
    "uniform",
    "vmss",
    "website",
    "when",
    "workload",
  ],
  "name": "azure-compute",
}
`;

exports[`azure-compute - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "3389",
  "association",
  "autoscale",
  "azure",
  "backend",
  "balancer",
  "black",
  "burstable",
  "capacity",
  "compare",
  "compute",
  "connect",
  "connectivity",
  "cost",
  "disassociation",
  "estimate",
  "family",
  "flexible",
  "guarantee",
  "learning",
  "lightweight",
  "linux",
  "load",
  "orchestration",
  "password",
  "port",
  "pre-provision",
  "pricing",
  "reach",
  "recommend",
  "recommendations",
  "refused",
  "reservation",
  "reservations",
  "reserve",
  "reset",
  "router",
  "scale",
  "screen",
  "server",
  "simulation",
  "test",
  "troubleshoot",
  "troubleshooting",
  "uniform",
  "vmss",
  "website",
  "when",
  "workload",
]
`;
